Added Tick Labels.

--- a/MathGrapher/MainWindow.xaml
+++ b/MathGrapher/MainWindow.xaml
@@ -21,14 +21,30 @@
                                       Max="1.5"
                                       Min="-1.5"
                                       Thickness="1"
-                                      Color="Black" />
+                                      Color="Black">
+                    <local:AxisDefinition.TickLabels>
+                        <local:TickLabelsDefinition FontFamily="Calibri"
+                                                    FontSize="10.667"
+                                                    Foreground="Black"
+                                                    Frequency="2"
+                                                    Offset="4" />
+                    </local:AxisDefinition.TickLabels>
+                </local:AxisDefinition>
             </local:Graph.XAxis>
             <local:Graph.YAxis>
                 <local:AxisDefinition Interval="0.25"
                                       Max="1.5"
                                       Min="-1.5"
                                       Thickness="1"
-                                      Color="Black" />
+                                      Color="Black">
+                    <local:AxisDefinition.TickLabels>
+                        <local:TickLabelsDefinition FontFamily="Calibri"
+                                                    FontSize="10.667"
+                                                    Foreground="Black"
+                                                    Frequency="2"
+                                                    Offset="4" />
+                    </local:AxisDefinition.TickLabels>
+                </local:AxisDefinition>
             </local:Graph.YAxis>
             <local:Graph.Ticks>
                 <local:TicksDefinition Width="5"
